--- a/miniProject.html
+++ b/miniProject.html
@@ -9,7 +9,7 @@
     <title>miniProject</title>
   </head>
   <body>
-    <button onclick="getPosts()">Get Posts!</button>
+    <button onclick="getPosts()">Get Posts!</button><br /><br />
     <div id="posts"></div>
   </body>
 </html>
